<resources>
    <string name="app_name">Scouting</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->


    <string name="novo_utilizador">Novo Utilizador</string>
    <string name="criar_utilizador">Criar Utilizador</string>
    <string name="password">Password</string>
    <string name="nome_utlilizador">Nome Utlilizador</string>
    <string name="birthdate">Birthdate</string>
    <string name="nationality">Nationality</string>
    <string name="register_novo_utilizador">Registar Novo Utilizador!</string>
    <string name="registry_confirmed" > Utilizador Criado</string>
    <string name="failed_registration" > Falha á criar um utilizador! </string>
    <string name="nome_do_utilizador">Nome do Utilizador</string>
    <string name="incorrect_login" >O utilizador ou password estão erradas</string>
    <string name="title_activity_activities">ActivitiesActivity</string>
    <string name="nome_actividade">Nome Actividade</string>
    <string name="nova_atividade">Nova Atividade</string>
    <string name="data_de_in_cio">Data de início</string>
    <string name="nome">Nome</string>
    <string name="morada">Morada</string>
    <string name="pa_s">País</string>
    <string name="email">Email</string>
    <string name="telefone">Telefone</string>
    <string name="missing_information">Preencher todos campos</string>
    <string name="activities_created">Nova atividade criada</string>
    <string name="failed_to_create_activities">"Erro ao criar uma nova atividade "</string>
    <string name="cidade">Cidade</string>
    <string name="criar_atividade">Criar Atividade</string>
    <string name="n_o_tens_conta">Não tens conta:</string>
    <string name="login">Login</string>
    <string name="j_tens_conta">Já tens Conta</string>
    <string name="realizar_login">Realizar Login</string>
    <string name="criar_novo_utilizador">Criar novo Utilizador</string>
    <string name="voltar">Voltar</string>
    <string name="date">Date:</string>
    <string name="dirigentes">Dirigentes</string>
    <string name="escoteiros">Escoteiros</string>
    <string name="criar">Criar</string>


    <string name="numero_de_telemovel">Numero de telemovel</string>
    <string name="data_de_nascimento">Data de nascimento</string>
    <string name="nome_staff">Nome Dirigente</string>

    <string name="data_de_ade_o">Data de adeção:</string>
    <string name="creation_date">Creation date</string>
    <string name="nome_scout">Nome Escoteiro</string>
    <string name="criar_scout">Criar Escoteiro</string>

    <string name="novo_staff">Novo Dirigente</string>
    <string name="criar_staff">Criar Dirigente</string>
    <string name="novo_scout">Novo Escoteiro</string>
    <string name="dirigente">Dirigente</string>
    <string name="atividades">Atividades</string>
</resources>
