<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.RegisterActivity">

    <TextView
        android:id="@+id/txtView_newUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/novo_utilizador"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtTex_RegisterUsername"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:textSize="17sp"
        android:hint="@string/nome_utlilizador"
        android:singleLine="true"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtView_newUser"
        />
    <EditText
        android:id="@+id/edtTex_RegisterPassword"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:textSize="17sp"
        android:hint="@string/password"
        android:singleLine="true"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtTex_RegisterUsername"
        />
    <EditText
        android:id="@+id/edtTex_RegisterEmail"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:textSize="17sp"
        android:hint="@string/email"
        android:singleLine="true"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtTex_RegisterPassword"
        />
    <EditText
        android:id="@+id/edtTex_RegisterBirthdate"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:textSize="17sp"
        android:hint="@string/birthdate"
        android:singleLine="true"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtTex_RegisterEmail"
        />
    <EditText
        android:id="@+id/edtTex_RegisterNationality"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:textSize="17sp"
        android:hint="@string/nationality"
        android:singleLine="true"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtTex_RegisterBirthdate"
        />
    <Button
        android:id="@+id/btn_RegisterCreateUser"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:text="@string/criar_utilizador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtTex_RegisterNationality"
        />
    <LinearLayout
        android:id="@+id/RegisterLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_RegisterCreateUser">

    <TextView
        android:id="@+id/txtView_GoToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/j_tens_conta"
        android:layout_marginEnd="5dp"
        />

    <TextView
        android:id="@+id/txtView_GoToLoginUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/realizar_login"
        />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>