<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.CreateScout">

    <TextView
        android:id="@+id/txtView_newScout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/novo_scout"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextRegisterName"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:textSize="17sp"
        android:hint="@string/nome"
        android:singleLine="true"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtView_newScout"
        />

    <EditText
        android:id="@+id/editTextRegisterBirthdate"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:textSize="17sp"
        android:hint="@string/data_de_nascimento"
        android:singleLine="true"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextRegisterName"
        />

    <EditText
        android:id="@+id/editTextRegisterEmail"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:textSize="17sp"
        android:hint="@string/email"
        android:singleLine="true"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextRegisterBirthdate"
        />
    <EditText
        android:id="@+id/editTextRegisterPhone"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:textSize="17sp"
        android:hint="@string/numero_de_telemovel"
        android:singleLine="true"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextRegisterEmail"
        />

    <EditText
        android:id="@+id/editTextRegisterCountry"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:textSize="17sp"
        android:hint="@string/pa_s"
        android:singleLine="true"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextRegisterPhone"
        />
    <Button
        android:id="@+id/btn_CreateScout"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        android:text="@string/criar_scout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextRegisterCountry"
        />


</androidx.constraintlayout.widget.ConstraintLayout>