<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">

    <TextView
        android:id="@+id/txtView_newUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:text="@string/login"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtTex_LoginUsername"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:textSize="17sp"
        android:hint="@string/nome_do_utilizador"
        android:singleLine="true"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtView_newUser"
        />
    <EditText
        android:id="@+id/edtTex_LoginPassword"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:textSize="17sp"
        android:hint="@string/password"
        android:singleLine="true"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtTex_LoginUsername"
        />

    <Button
        android:id="@+id/btn_loginUser"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        android:text="@string/realizar_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtTex_LoginPassword"
        />
    <LinearLayout
        android:id="@+id/RegisterLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_loginUser">

        <TextView
            android:id="@+id/txtView_NewUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n_o_tens_conta"
            android:layout_marginEnd="5dp"
            />

        <TextView
            android:id="@+id/txtView_GoToCreateNewUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_novo_utilizador"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>