<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.CreateActivitiesActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txtView_newActivities"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:text="@string/nova_atividade"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edtTex_addActivitiesName"
                android:layout_width="270dp"
                android:layout_height="40dp"
                android:layout_marginTop="60dp"
                android:hint="@string/nome_utlilizador"
                android:singleLine="true"
                android:textAlignment="center"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtView_newActivities" />

            <EditText
                android:id="@+id/edtTex_addActivitiesStartDate"
                android:layout_width="270dp"
                android:layout_height="40dp"
                android:layout_marginTop="32dp"
                android:hint="@string/password"
                android:singleLine="true"
                android:textAlignment="center"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtTex_addActivitiesName" />

            <EditText
                android:id="@+id/edtTex_addActivitiesAddress"
                android:layout_width="270dp"
                android:layout_height="40dp"
                android:layout_marginTop="32dp"
                android:hint="Email"
                android:singleLine="true"
                android:textAlignment="center"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtTex_addActivitiesStartDate" />

            <EditText
                android:id="@+id/edtTex_addActivitiesCity"
                android:layout_width="270dp"
                android:layout_height="40dp"
                android:layout_marginTop="32dp"
                android:hint="@string/birthdate"
                android:singleLine="true"
                android:textAlignment="center"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtTex_addActivitiesAddress" />

            <EditText
                android:id="@+id/edtTex_addActivitiesCountry"
                android:layout_width="270dp"
                android:layout_height="40dp"
                android:layout_marginTop="32dp"
                android:hint="@string/nationality"
                android:singleLine="true"
                android:textAlignment="center"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtTex_addActivitiesCity" />

            <EditText
                android:id="@+id/edtTex_addActivitiesEmail"
                android:layout_width="270dp"
                android:layout_height="40dp"
                android:layout_marginTop="32dp"
                android:hint="@string/nome_utlilizador"
                android:singleLine="true"
                android:textAlignment="center"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtTex_addActivitiesCountry" />

            <EditText
                android:id="@+id/edtTex_addActivitiesPhone"
                android:layout_width="270dp"
                android:layout_height="40dp"
                android:layout_marginTop="32dp"
                android:hint="@string/nome_utlilizador"
                android:singleLine="true"
                android:textAlignment="center"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtTex_addActivitiesEmail" />

            <Button
                android:id="@+id/btn_RegisterCreateUser"
                android:layout_width="270dp"
                android:layout_height="60dp"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="40dp"
                android:text="@string/criar_utilizador"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtTex_addActivitiesPhone" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
